@@ -2,17 +2,17 @@ from typing import Any, overload
 
 
 @overload
-def sum(x: int, y: int) -> int:
+def sum(x: int, y: int = 0) -> int:
     ...
 
 
 @overload
-def sum(x: "float", y: "float") -> "float":
+def sum(x: "float", y: "float" = 0.0) -> "float":
     ...
 
 
 @overload
-def sum(x: str, y: str) -> str:
+def sum(x: str, y: str = ...) -> str:
     ...
 
 
@@ -25,15 +25,15 @@ class Math:
     """docstring"""
 
     @overload
-    def sum(self, x: int, y: int) -> int:
+    def sum(self, x: int, y: int = 0) -> int:
         ...
 
     @overload
-    def sum(self, x: "float", y: "float") -> "float":
+    def sum(self, x: "float", y: "float" = 0.0) -> "float":
         ...
 
     @overload
-    def sum(self, x: str, y: str) -> str:
+    def sum(self, x: str, y: str = ...) -> str:
         ...
 
     def sum(self, x, y):
