@@ -2078,17 +2078,17 @@ def test_overload(app):
         '   docstring',
         '',
         '',
-        '   .. py:method:: Math.sum(x: int, y: int) -> int',
-        '                  Math.sum(x: float, y: float) -> float',
-        '                  Math.sum(x: str, y: str) -> str',
+        '   .. py:method:: Math.sum(x: int, y: int = 0) -> int',
+        '                  Math.sum(x: float, y: float = 0.0) -> float',
+        '                  Math.sum(x: str, y: str = ...) -> str',
         '      :module: target.overload',
         '',
         '      docstring',
         '',
         '',
-        '.. py:function:: sum(x: int, y: int) -> int',
-        '                 sum(x: float, y: float) -> float',
-        '                 sum(x: str, y: str) -> str',
+        '.. py:function:: sum(x: int, y: int = 0) -> int',
+        '                 sum(x: float, y: float = 0.0) -> float',
+        '                 sum(x: str, y: str = ...) -> str',
         '   :module: target.overload',
         '',
         '   docstring',
