@@ -45,6 +45,7 @@ Bugs fixed
 * #8315: autodoc: Failed to resolve struct.Struct type annotation
 * #8652: autodoc: All variable comments in the module are ignored if the module
   contains invalid type comments
+* #8693: autodoc: Default values for overloaded functions are rendered as string
 * #8306: autosummary: mocked modules are documented as empty page when using
   :recursive: option
 * #8618: html: kbd role produces incorrect HTML when compound-key separators (-,
